<resources>
    <string name="app_name">pr9</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="sort">Sort</string>
    <string name="search">Search</string>
    <string name="print">Print</string>
    <string name="hall">Hall</string>
    <string name="cinema">Cinema</string>
    <string name="film">Film</string>
    <string name="time">Time</string>
    <string name="save">Save</string>
    <string name="date">Date</string>
    <string name="enter_row">Enter Row</string>
    <string name="searching_string">Searching string</string>
    <string name="EnterDel">Enter row num for deleting</string>
    <string name="del">Delete</string>
    <string name="enterEdit">Enter column num for editing</string>
    <string name="entersort">Enter column num for sorting</string>
    <string name="entersearch">Enter column num for searching</string>
    <string name="notIndex">No such index</string>
    <string name="wrongString">Some string is incorrect</string>
    <string name="nullString">Some string is enpty.</string>
</resources>